更新网站设计和配置 - 更新 .gitignore 文件，排除虚拟环境和临时文件 - 完善网站内容和样式设计 - 添加动画效果和响应式布局 - 更新社交媒体链接和联系信息

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,33 @@
+# Virtual environment
 .venv/
-node_modules/
+venv/
+env/
+
+# Python cache
 __pycache__/
-*.py[cod]
-*$py.class
-*.so
-.DS_Store
+*.pyc
+*.pyo
+*.pyd
 .Python
+
+# IDE files
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Temporary files
+*.tmp
+*.temp
+
+# Log files
+*.log
+
+node_modules/
 build/
 develop-eggs/
 dist/
